# multi-agent-code-review

./: .env.example  .gitignore  AGENTS.md  Build_from_Scratch.md  DEMO.md  DEVELOPMENT.md  END_TO_END_REPORT.md  FINDINGS_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  Makefile  Procfile  QUICKSTART.md  README.md  TESTING_GUIDE.md  TESTING_INSTRUCTIONS.md  WORKFLOW_COMPLETE_SUMMARY.md  demo_review_system.py  docker-compose.yml  obvious_issues.py  package-lock.json  pyproject.toml  run-debug.sh  run.sh  test_fix.py  test_pr_review.py  test_vulnerable_app.py  test_vulnerable_code.py
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx
docs/: HLD.md  LLD.md  PR_HANDLING.md  USER_FLOWS.md
docs/project-details/: architecture-overview.md  implementation-guidelines.md  patch-agent-architecture.md  proposal.md  security-agent-architecture.md  style-agent-architecture.md  (+1 more)
eval/: Evaluation_Code_Generation_Instructions.md  README.md  USAGE.md  __init__.py  cache_utils.py  config.yaml  config_runtime.py  optional_dependencies.py  render_results.py  run_evals.py  zero_shot_baseline.py
results/: EVALUATION_SUMMARY_2026-07-18.html  EVALUATION_SUMMARY_2026-07-18.md  ablation_eval.json  bug_eval.json  codespace_final_report_2026-07-18.html  codespace_summary_2026-07-18.html  defects4j_lang1.txt  e2e_report_2026-07-18.html  evaluation_results.html  final_report.json  final_report.md  patch_eval.json  project_agent_eval.json  rag_eval.json  security_eval.json  style_eval.json
scripts/: ingest_owasp.py
src/: main.py  worker.py
(+133 files in other folders)
