[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cap-pr-review"
version = "0.1.0"
description = "AI-powered multi-agent system that reviews PRs on GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "arq>=0.26",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
observability = [
    "langfuse>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "respx>=0.21",
    "honcho>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
